Added time to get network response
