# src/modules/Backend/routes/swagger.json
@@ -2049,6 +2049,26 @@
               "enum": ["socks5", "http"]
             }
           }
+        },
+        "time": {
+          "type": "object",
+          "properties": {
+            "currentTime": {
+              "type": "string"
+            },
+            "ntpHost": {
+              "type": "string"
+            },
+            "reachable": {
+              "type": "boolean"
+            },
+            "timezone": {
+              "type": "string"
+            },
+            "useNtp": {
+              "type": "boolean"
+            }
+          }
         }
       }
     },
@@ -2116,6 +2136,26 @@
             "type": {
               "type": "string",
               "enum": ["socks5", "http"]
+            }
+          }
+        },
+        "time": {
+          "type": "object",
+          "properties": {
+            "currentTime": {
+              "type": "string"
+            },
+            "ntpHost": {
+              "type": "string"
+            },
+            "reachable": {
+              "type": "boolean"
+            },
+            "timezone": {
+              "type": "string"
+            },
+            "useNtp": {
+              "type": "boolean"
             }
           }
         }
